--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>website</title>
+    <title>Horiseon - Search Engine Optimization, Online Reputation Management, Social Media Marketing</title>
 </head>
 
 <body>
+
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -24,7 +25,9 @@
             </ul>
         </div>
     </div>
+
     <div class="hero"></div>
+
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left">
@@ -35,6 +38,7 @@
                 your visibility and find the right customers for your business.
             </p>
         </div>
+
         <div id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right">
             <h2>Online Reputation Management</h2>
@@ -44,6 +48,7 @@
                 you the control over what potential customers see when they search for your business.
             </p>
         </div>
+
         <div id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left">
             <h2>Social Media Marketing</h2>
@@ -54,6 +59,7 @@
             </p>
         </div>
     </div>
+
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -63,6 +69,7 @@
                 to your website.
             </p>
         </div>
+
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png">
@@ -71,6 +78,7 @@
                 for your business.
             </p>
         </div>
+
         <div class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png">
@@ -80,12 +88,14 @@
             </p>
         </div>
     </div>
+
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
+
 </body>
 
 </html>
