--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>Horiseon - Search Engine Optimization, Online Reputation Management, Social Media Marketing</title>
+    <title>Horiseon: Successful Digital Marketing</title>
 </head>
 
 <body>
 
-    <header class="header">
-        <h1>Hori<strong class="seo">seo</strong>n</h1>
-        <nav>
-            <ul>
-                <li>
+    <header>
+        <h1>Hori<strong id="seo">seo</strong>n</h1>
+        <nav id="top-nav-bar">
+            <ul id="nav-list">
+                <li class="nav-list-items">
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
-                <li>
+                <li class="nav-list-items">
                     <a href="#online-reputation-management">Online Reputation Management</a>
                 </li>
-                <li>
+                <li class="nav-list-items">
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
@@ -28,12 +28,13 @@
 
     <main>
 
-        <div class="hero"></div>
+        <div id="main-img"></div>
 
-        <div class="content">
-            <section class="search-engine-optimization">
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left">
-                <h2>Search Engine Optimization</h2>
+        <div id="main-content">
+            <section id="search-engine-optimization" class="content-1">
+                <img src="./assets/images/search-engine-optimization.jpg"
+                    alt="desk with SEO aspects written in a notebook" class="section-img-left">
+                <h2 class="content-1-headers">Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they
                     travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
@@ -41,9 +42,10 @@
                 </p>
             </section>
 
-            <section id="online-reputation-management" class="online-reputation-management">
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right">
-                <h2>Online Reputation Management</h2>
+            <section id="online-reputation-management" class="content-1">
+                <img src="./assets/images/online-reputation-management.jpg"
+                    alt="laptop showing an online reputation visual" id="section-img-right">
+                <h2 class="content-1-headers">Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an
                     internet connection to say whatever they want about your business. Online Reputation Management
@@ -52,9 +54,10 @@
                 </p>
             </section>
 
-            <section id="social-media-marketing" class="social-media-marketing">
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left">
-                <h2>Social Media Marketing</h2>
+            <section id="social-media-marketing" class="content-1">
+                <img src="./assets/images/social-media-marketing.jpg"
+                    alt="conference table with social media terms and symbols on it" class="section-img-left">
+                <h2 class="content-1-headers">Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps
                     you
@@ -64,10 +67,11 @@
             </section>
         </div>
 
-        <aside class="benefits">
-            <section class="benefit-lead">
-                <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png">
+        <aside id="side-bar">
+            <section class="content-2">
+                <h3 class="side-bar-headers">Lead Generation</h3>
+                <img src="./assets/images/lead-generation.png" alt="icon for successful consumer activity"
+                    class="side-bar-imgs">
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers
                     directly
@@ -75,9 +79,10 @@
                 </p>
             </section>
 
-            <section class="benefit-brand">
-                <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png">
+            <section class="content-2">
+                <h3 class="side-bar-headers">Brand Awareness</h3>
+                <img src="./assets/images/brand-awareness.png" alt="icon for successful SEO and advertising"
+                    class="side-bar-imgs">
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and
                     visibility
@@ -85,9 +90,10 @@
                 </p>
             </section>
 
-            <section class="benefit-cost">
-                <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png">
+            <section class="content-2">
+                <h3 class="side-bar-headers">Cost Management</h3>
+                <img src="./assets/images/cost-management.png" alt="icon for successfully managing advertising prices"
+                    class="side-bar-imgs">
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no
                     longer
@@ -98,8 +104,8 @@
 
     </main>
 
-    <footer class="footer">
-        <h3>Made with ❤️️ by Horiseon</h3>
+    <footer>
+        <h3 id="footer-text">Made with ❤️️ by Horiseon</h3>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
