more semantic HTML/CSS edits

--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
 
     <main>
 
-        <div id="main-img"></div>
+        <img src="assets/images/digital-marketing-meeting.jpg" alt="coworkers in a meeting collaborating on a project"
+            id="main-img">
 
         <div id="main-content">
             <section id="search-engine-optimization" class="content-1">
                 <img src="./assets/images/search-engine-optimization.jpg"
-                    alt="desk with SEO aspects written in a notebook" class="section-img-left">
+                    alt="desk with SEO aspects written in a notebook" class="section-imgs-left">
                 <h2 class="content-1-headers">Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they
@@ -56,7 +57,7 @@
 
             <section id="social-media-marketing" class="content-1">
                 <img src="./assets/images/social-media-marketing.jpg"
-                    alt="conference table with social media terms and symbols on it" class="section-img-left">
+                    alt="conference table with social media terms and symbols on it" class="section-imgs-left">
                 <h2 class="content-1-headers">Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps
@@ -105,7 +106,7 @@
     </main>
 
     <footer>
-        <h3 id="footer-text">Made with ❤️️ by Horiseon</h3>
+        <h3>Made with ❤️️ by Horiseon</h3>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
