added comments in HTML and CSS

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
     <header>
+        <!--strong tag adds importance for screen readers and makes text bold-->
         <h1>Hori<strong id="seo">seo</strong>n</h1>
         <nav id="top-nav-bar">
             <ul id="nav-list">
@@ -28,9 +29,11 @@
 
     <main>
 
+        <!--giant main image-->
         <img src="assets/images/digital-marketing-meeting.jpg" alt="coworkers in a meeting collaborating on a project"
             id="main-img">
 
+        <!--3 blue boxes of content-->
         <div id="main-content">
             <section id="search-engine-optimization" class="content-1">
                 <img src="./assets/images/search-engine-optimization.jpg"
@@ -68,6 +71,7 @@
             </section>
         </div>
 
+        <!--side bar on the right under giant main image-->
         <aside id="side-bar">
             <section class="content-2">
                 <h3 class="side-bar-headers">Lead Generation</h3>
